--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------
-General Settings
+# General
 --------------------------------------------------------------*/
 * {
   margin: 0;
@@ -14,22 +14,22 @@ a {
 }
 
 /*--------------------------------------------------------------
-# Header
+ Header
 --------------------------------------------------------------*/
-header {
+.header {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   width: 280px;
-  transition: all ease-in-out 0.5s;
+
   z-index: 9997;
-  transition: all 0.5s;
   padding: 0 15px;
   background: #040b14;
   overflow-y: auto;
 }
-#header .profile img {
+.header .profile img {
   margin: 15px auto;
   display: block;
   width: 120px;
@@ -38,7 +38,7 @@ header {
   max-width: 100%;
   height: auto;
 }
-#header .profile h1 {
+.header .profile h1 {
   font-size: 24px;
   margin: 0;
   padding: 0;
@@ -48,16 +48,16 @@ header {
   font-family: "Poppins", sans-serif;
 }
 
-#header .profile h1 a,
-#header .profile h1 a:hover {
+.header .profile h1 a,
+.header .profile h1 a:hover {
   color: #fff;
   text-decoration: none;
 }
-#header .social-links {
+.header .social-links {
   text-align: center;
   margin-top: 20px;
 }
-#header .profile .social-links a {
+.header .profile .social-links a {
   font-size: 18px;
   display: inline-block;
   background: #212431;
@@ -72,14 +72,22 @@ header {
   transition: 0.3s;
 }
 
-#header .profile .social-links i {
+.header .profile .social-links i {
   margin-top: 9.5px;
 }
 
-#header .profile .social-links a:hover {
+.header .profile .social-links a:hover {
   background: #ffb727;
   color: #fff;
   text-decoration: none;
+}
+@media only screen and (min-width: 1200px) {
+  .header {
+    display: block;
+  }
+  #nav-toggle {
+    display: none;
+  }
 }
 /*--------------------------------------------------------------
 # Navigation Menu
@@ -151,13 +159,11 @@ header {
   border-radius: 50px;
   cursor: pointer;
 }
+/* Class used with js */
 .mobile-nav-active {
-  overflow: hidden;
+  display: block;
 }
 
-.mobile-nav-active #header {
-  left: 0;
-}
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
@@ -187,10 +193,10 @@ header {
   min-width: 300px;
 }
 
-#hero h1 {
+#hero h2 {
   margin: 0 0 10px 0;
-  font-size: 64px;
-  font-weight: 700;
+  font-size: 3rem;
+  font-weight: bold;
   line-height: 56px;
   color: #fff;
 }
@@ -203,22 +209,29 @@ header {
 }
 
 #hero p span {
+  display: block;
   font-weight: bolder;
   color: #fff;
   padding-bottom: 4px;
   letter-spacing: 1px;
   /* border-bottom: 3px solid #ffb727; */
 }
+
+@media only screen and (min-width: 600px) {
+  #hero h1 {
+    font-size: 4rem;
+  }
+
+  #hero p span {
+    display: inline;
+  }
+}
 /*--------------------------------------------------------------
 # Sections General
 --------------------------------------------------------------*/
-main {
-  margin-left: 340px;
+#main {
+  padding: 40px;
 }
-.section-bg {
-  background: #f5f8fd;
-}
-
 .section-title {
   padding-bottom: 30px;
 }
@@ -247,12 +260,15 @@ main {
   margin-bottom: 0;
 }
 
+@media only screen and (min-width: 1200px) {
+  #main {
+    margin-left: 290px;
+  }
+}
 /* --------------------------------------------------------------
   # About
   --------------------------------------------------------------*/
-.about {
-  margin: 40px 50px;
-}
+
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
@@ -260,7 +276,10 @@ main {
 }
 .container-about {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 20px;
+  margin-bottom: 40px;
 }
 .img-about {
   width: 300px;
@@ -283,13 +302,17 @@ main {
 .about .content ul strong {
   margin-right: 10px;
 }
+@media only screen and (min-width: 700px) {
+  .container-about {
+    flex-direction: row;
+    /* justify-content: left; */
+    gap: 20px;
+  }
+}
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
-.resume .row {
-  display: flex;
-  height: 100%;
-}
+
 .resume-container {
   margin: 20px;
 }
@@ -356,13 +379,22 @@ main {
   background: #fff;
   border: 2px solid #1f5297;
 }
+
+@media only screen and (min-width: 700px) {
+  .resume .row {
+    display: flex;
+    height: 100%;
+  }
+}
 /*--------------------------------------------------------------
 # Projects
 --------------------------------------------------------------*/
 .section-title .row {
+  padding: 20px 0;
   display: flex;
-  justify-content: center;
-  gap: 80px;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
   height: 100%;
 }
 .services .icon-box {
@@ -417,6 +449,20 @@ main {
 .services .icon-box:hover .title a {
   color: #ffb727;
 }
+@media only screen and (min-width: 600px) {
+  .section-title .row {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+}
+@media only screen and (min-width: 832px) {
+  .section-title .row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+  }
+}
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
@@ -449,14 +495,14 @@ main {
   padding: 0 0 0 60px;
   font-size: 22px;
   font-weight: 600;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   color: #050d18;
 }
 
 .contact .info p {
   padding: 0 0 10px 60px;
   margin-bottom: 20px;
-  font-size: 14px;
+  font-size: 10px;
   color: #161b52;
 }
 
@@ -470,4 +516,47 @@ main {
   background: #ffb727;
   color: #fff;
   cursor: pointer;
+}
+@media only screen and (min-width: 360px) {
+  .contact .info p {
+    font-size: 14px;
+  }
+}
+
+/*--------------------------------------------------------------
+# Back to top button
+--------------------------------------------------------------*/
+.back-to-top {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+  z-index: 996;
+  background: #ffb727;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  transition: all 0.4s;
+}
+
+.back-to-top i {
+  font-size: 28px;
+  color: #fff;
+  line-height: 0;
+}
+
+.back-to-top:hover {
+  background: #2eafec;
+  color: #fff;
+}
+
+.back-to-top.active {
+  visibility: visible;
+  opacity: 1;
+}
+
+.active {
+  display: flex;
 }
